# git-ignore

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac  git-ignore  git-ignore.in
doc/: .gitignore  Makefile.am  git-ignore.1.md  git-ignore.man
etc/: Makefile.am  git-ignore
t/: Makefile  Makefile.am  README.md  setup.sh  t0001-exclude.sh  t0002-ignore.sh  t0003-help.sh  t0004-untracked.sh
t/t0002/: single.status
t/t0003/: help.out
t/t0004/: untracked.status
