AC_PREREQ([2.68])
AC_INIT([git-ignore], [1.0], [albertofanjul@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign 1.11])

AC_PROG_INSTALL

AC_CONFIG_FILES([git-ignore
		 Makefile
		 etc/Makefile
                 doc/Makefile
                 t/Makefile])
AC_REQUIRE_AUX_FILE([tap-driver.sh])
AC_OUTPUT
